--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,3 +1,5 @@
+# ref: https://docs.ansible.com/ansible/latest/reference_appendices/config.html
+
 [defaults]
 host_key_checking = False
 # https://github.com/ansible/ansible/issues/56930 (to ignore group names with - and .)
