--- a/ansible/roles/k3s/defaults/main.yml
+++ b/ansible/roles/k3s/defaults/main.yml
@@ -6,7 +6,9 @@ k3s_bin_url: https://github.com/rancher/k3s/releases/download/{{ k3s_version }}/
 k3s_sha_url: https://github.com/rancher/k3s/releases/download/{{ k3s_version }}/sha256sum-arm.txt
 k3s_bin: /usr/local/bin/k3s
 k3s_node_token_path: /var/lib/rancher/k3s/server/node-token
+k3s_kubeconfig_path: /etc/rancher/k3s/k3s.yaml
 
+k3s_cluster_name: kpi
 k3s_server_port: 6443
 k3s_server_url: "https://{{ hostvars[groups['k3s-servers'][0]]['ansible_host'] }}:{{ k3s_server_port }}"
 
